--- a/app/views/main_layout.erb
+++ b/app/views/main_layout.erb
@@ -3,8 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title><%= @title %></title>
+  <link rel='stylesheet' href='/css/style.css'/>
+  <script type ="text/javascript" src="/js/javascript.js"></script>
 </head>
 <body>
+  <p> Always here for you </p>
   <%= yield %>
 </body>
 </html>
